# QML-Learn

./: LICENSE  README.md
AccountPortal/: AccountPortal.qmlproject  AccountPortal.qmlproject.qtds  AccountPortal.qmlproject.qtds.c9eecc2  AccountPortal.qmlproject.qtds.f935e93  AccountPortal.qrc  CMakeLists.txt  qds.cmake  qtquickcontrols2.conf
AccountPortal/AccountPortal/: CMakeLists.txt  Constants.qml  qmldir
AccountPortal/AccountPortal/designer/: plugin.metainfo
AccountPortal/AccountPortalContent/: App.qml  CMakeLists.txt  FormScreen.ui.qml  LoginForm.ui.qml  Main.ui.qml  RegisterForm.ui.qml  RegisterScreenForm.ui.qml
AccountPortal/App/autogen/: environment.h
Base/: CMakeLists.txt  Main.qml  main.cpp
CustomLauncherAPI/: CMakeLists.txt  Main.qml  README.md  data.cpp  data.h  main.cpp
CustomLauncherAPI/Components/: GameContent.qml  Sidebar.qml  SidebarCategoryItem.qml
CustomLauncherAPI/module/QApi/: CMakeLists.txt  QApi.cpp  QApi.h
QML_Cpp/: CMakeLists.txt  Main.qml  customcpp.cpp  customcpp.h  main.cpp
ResponsiveApp/: CMakeLists.txt  Main.qml  main.cpp
